# wifi-qr

./: Cargo.toml  README.md  build.rs  installer.nsi
.github/workflows/: ci.yml  release.yml
src/: fonts.rs  icons.rs  main.rs  route.rs  state.rs  theme.rs  wifi.rs
src/components/: button.rs  mod.rs  nav_bar.rs
src/fonts/: mod.rs
src/pages/: home.rs  mod.rs  qr.rs  wifi_list.rs  wifi_qr.rs
src/widgets/: button.rs
