[package]
name = "wifi-qr"
version = "0.3.0"
description = "A small Windows utiliy to show a QR code for the stored WiFi connections."
license = "MIT"
edition = "2021"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[build-dependencies]
embed-resource = "2.4"

[dependencies]
freya = "0.2"
freya-engine = "0.2"
freya-hooks = "0.2"
dioxus-router = "0.5"
dioxus = "0.5"
winit = { version = "0.29", default-features = false }
image = { version = "0.24", features = ["png"] }
qrcode-generator = "4.1"
window-vibrancy = "0.5"

[patch.crates-io]
freya = { git = "https://github.com/marc2332/freya", rev = "bf08123c62b94f0ca2d3aaece8374c9569ebb16f" }
freya-engine = { git = "https://github.com/marc2332/freya", rev = "bf08123c62b94f0ca2d3aaece8374c9569ebb16f" }
freya-hooks = { git = "https://github.com/marc2332/freya", rev = "bf08123c62b94f0ca2d3aaece8374c9569ebb16f" }
