[package]
name = "wifi-qr"
version = "0.3.1"
description = "A small Windows utiliy to show a QR code for the stored WiFi connections."
license = "MIT"
edition = "2021"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[build-dependencies]
embed-resource = "2.4"

[dependencies]
freya = "0.2"
freya-engine = "0.2"
freya-hooks = "0.2"
dioxus-router = "0.5"
dioxus = "0.5"
winit = { version = "0.30", default-features = false }
image = { version = "0.25", features = ["png"] }
qrcode-generator = "4.1"
window-vibrancy = "0.5"

[patch.crates-io]
freya = { git = "https://github.com/marc2332/freya", rev = "94e7c19f0f162b54f1180d315f54744f9a1993df" }
freya-engine = { git = "https://github.com/marc2332/freya", rev = "94e7c19f0f162b54f1180d315f54744f9a1993df" }
freya-hooks = { git = "https://github.com/marc2332/freya", rev = "94e7c19f0f162b54f1180d315f54744f9a1993df" }
